
- Adjusted channel window size.

- Custom PEMDecryptException to catch PEM decoding failure.

- Option to pass custom user agent string for identification string.

- Continue silently when invalid key is found in known hosts file.

- Add support for file append mode in SFTPv3Client.

- Option to pass charset for commands executed on the remote machine.

build251beta1, 2010-08-23:

- Due to the slightly changed semantics of Thread.interrupt() and Object.wait() in JDK 6,
  the code had to be adapted in several places. Please do not use Ganymed SSH-2 build250
  on JDK 6, as the Kex and Streamgobbler code may occasionally consume all CPU resources.
  
  Background: the JDK 6 javadocs for Object.wait say: "If the current thread is interrupted
  by any thread before or while it is waiting, then an InterruptedException is thrown."
  Unfortunately the Java 1.5 documentation does not say "before", only "while it is waiting".
  
  Thanks to Elias Horness.
  
build250, 2010-03-15:

- Ganymed SSH-2 for Java is back.
  The software can be downloaded from http://www.cleondris.ch/ssh2

- Fixed the use of default platform character encodings.

- Fixes for buggy servers.

- Wait for the reply to the ServiceRequest packet before sending the next request.

- Re-assign the interrupted flag after a InterruptedException.

build211beta4, 2006-12-05: (never officially released)

- Added Connection.sendIgnorePacket(...) methods which allow to send SSH_MSG_IGNORE packets.
  Thanks to Andrei Tchijov.

- Added support for the "none" authentication method.

- Revised the SHA-1 code. Highly optimized. Speed should be more than doubled.

- Changed references to the correct RFCs (instead of the drafts) in the javadocs (where possible).

- Fixed the write() method in the SFTP code. Unsatisfiable preconditions stopped the method
  from writing any bytes. As stated in the documentation, the SFTP code is still experimental.
  Thanks to Andreas Pueschel.
